--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 
 		<section class="services">
 			<div class="container">
-				<div class="services__top">
-					<div class="services__title-box">
-						<div class="services__title">Наші послуги</div>
-						<div class="services__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius tempore,
+				<div class="services__top title-box__forked">
+					<div class="services__box title-box">
+						<div class=" services__box-title title-box__title">Наші послуги</div>
+						<div class="services__box-text title-box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+							Eius tempore,
 							porro
 							ducimus officia veritatis cupiditate.</div>
 					</div>
-					<div class="services__btn">
+					<div class="services__box-btn title-box__btn">
 						<a href='#'>
 							Показати усі послуги
 						</a>
 					</div>
-
 				</div>
 				<div class="services__items">
 					<div class="services__item">
@@ -148,9 +148,10 @@
 			<div class="container">
 				<div class="form__inner">
 					<div class="form__content">
-						<div class="form__title-box">
-							<div class="form__title">Наші послуги</div>
-							<div class="form__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius tempore,
+						<div class="form__box title-box">
+							<div class="form__box-title title-box__title">Отримати консультацію</div>
+							<div class="form__box-text title-box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+								Eius tempore,
 								porro
 								ducimus officia veritatis cupiditate.
 							</div>
@@ -174,12 +175,11 @@
 										<label for="">
 											Тема запитання
 											<select name="" id="">
-												<option value=""></option>
-												<option value=""></option>
-												<option value=""></option>
-												<option value=""></option>
+												<option>Перший</option>
+												<option>Другий</option>
+												<option>Третій</option>
+												<option>Четвертий</option>
 											</select>
-											<input type="text">
 										</label>
 									</div>
 									<div class="form__box-right">
@@ -187,12 +187,117 @@
 											Повідомлення
 											<textarea></textarea>
 										</label>
-										<button type="submit">Отримати консультацію</button>
+										<button class='default-btn' type="submit">Отримати консультацію</button>
 									</div>
 								</div>
 							</form>
 						</div>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="advantages">
+			<div class="container">
+				<div class="advantages__inner">
+					<div class="advantages__item">
+						<div class="advantages__title">
+							Lorem ipsum dolor sit amet.
+						</div>
+						<div class="advantages__text">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__title">
+							Lorem ipsum dolor sit amet.
+						</div>
+						<div class="advantages__text">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__title">
+							Lorem ipsum dolor sit amet.
+						</div>
+						<div class="advantages__text">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="news">
+			<div class="container">
+				<div class="news__top title-box__forked">
+					<div class="news__title-box title-box">
+						<div class="news__box-title title-box__title">Наші послуги</div>
+						<div class="news__box-text title-box__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+							Eius tempore,
+							porro
+							ducimus officia veritatis cupiditate.</div>
+					</div>
+					<div class="news__box-btn title-box__btn">
+						<a href='#'>
+							Показати усі послуги
+						</a>
+					</div>
+				</div>
+				<div class="news__inner">
+					<div class="news__slider">
+						<div class="news__slider-inner">
+							<div class="news__slider-item">
+								<div class="news__slider-title">
+									Банкротство ы ліквідація підприємств України
+								</div>
+								<div class="news__slider-text">
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque omnis, asperiores, repudiandae explicabo iste ea delectus enim ipsa eius soluta totam libero. Nostrum nulla hic voluptatibus aut et! Eos, esse!
+								</div>
+								<div class="news__slider-author">
+									Андрій Ворошилов1, Lorem ipsum dolor sit.
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__slider-title">
+									Банкротство ы ліквідація підприємств України
+								</div>
+								<div class="news__slider-text">
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque omnis, asperiores, repudiandae explicabo iste ea delectus enim ipsa eius soluta totam libero. Nostrum nulla hic voluptatibus aut et! Eos, esse!
+								</div>
+								<div class="news__slider-author">
+									Андрій Ворошилов2, Lorem ipsum dolor sit.
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__slider-title">
+									Банкротство ы ліквідація підприємств України
+								</div>
+								<div class="news__slider-text">
+									Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque omnis, asperiores, repudiandae explicabo iste ea delectus enim ipsa eius soluta totam libero. Nostrum nulla hic voluptatibus aut et! Eos, esse!
+								</div>
+								<div class="news__slider-author">
+									Андрій Ворошилов3, Lorem ipsum dolor sit.
+								</div>
+							</div>
+							<div class="slick__prev slick__btn slick__disabled"><button></button></div>
+							<div class="slick__next slick__btn slick__disabled"><button></button></div>
+						</div>
+					</div>
+					<a href='#' class="news__blog">
+						<div class="news__images">
+							<img src="./img/news-1.jpg" alt="">
+							<div class="news-date">03.04</div>
+						</div>
+						<div class="news__blog-title">Новина компанії</div>
+						<div class="news__blog-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, placeat possimus! Dolor voluptates natus magnam.</div>
+					</a>
+					<a href='#' class="news__blog">
+						<div class="news__images">
+							<img src="./img/news-2.jpg" alt="">
+							<div class="news-date">03.04</div>
+						</div>
+						<div class="news__blog-title">Новина компанії</div>
+						<div class="news__blog-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, placeat possimus! Dolor voluptates natus magnam.</div>
+					</a>
 				</div>
 			</div>
 		</section>
