--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</div>
 						<nav class="menu">
 							<div class="header__btn-menu">
-								<span class="icon-bars"></span>
+								<span></span>
 							</div>
 							<ul>
 								<li><a href="#">Главная</a></li>
@@ -53,26 +53,89 @@
 		</header>
 
 		<section class="slider">
+			<div class="slick-prev slick-btn slick-disabled"><button></button></div>
 			<div class="container">
 				<div class="slider__inner">
 					<div class="slider__item-content">
-						<div class="slick-prev slick-btn slick-disabled"><button></button></div>
 						<div class="slider__item">
-							<div class="slider__title">
-								Комплексне закриття підприємства.
-							</div>
-							<div class="slider__text">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur blanditiis quos
-								quibusdam.
-							</div>
-							<div class="slider__btn">
-								<a href="#" class='default-btn '>Залишити заяву</a>
+							<div class="slider__block">
+								<div class="slider__title">
+									Комплексне закриття підприємства.1
+								</div>
+								<div class="slider__text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur blanditiis
+									quos
+									quibusdam.1
+								</div>
+								<div class="slider__btn">
+									<a href="#" class='default-btn '>Залишити заяву</a>
+								</div>
 							</div>
 						</div>
-						<div class="slick-next slick-btn slick-disabled"><button></button></div>
+						<div class="slider__item">
+							<div class="slider__block">
+								<div class="slider__title">
+									Комплексне закриття підприємства.2
+								</div>
+								<div class="slider__text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur blanditiis
+									quos
+									quibusdam.2
+								</div>
+								<div class="slider__btn">
+									<a href="#" class='default-btn '>Залишити заяву</a>
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<div class="slider__block">
+								<div class="slider__title">
+									Комплексне закриття підприємства.3
+								</div>
+								<div class="slider__text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur blanditiis
+									quos
+									quibusdam.3
+								</div>
+								<div class="slider__btn">
+									<a href="#" class='default-btn '>Залишити заяву</a>
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<div class="slider__block">
+								<div class="slider__title">
+									Комплексне закриття підприємства.4
+								</div>
+								<div class="slider__text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur blanditiis
+									quos
+									quibusdam.4
+								</div>
+								<div class="slider__btn">
+									<a href="#" class='default-btn '>Залишити заяву</a>
+								</div>
+							</div>
+						</div>
+						<div class="slider__item">
+							<div class="slider__block">
+								<div class="slider__title">
+									Комплексне закриття підприємства.5
+								</div>
+								<div class="slider__text">
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur blanditiis
+									quos
+									quibusdam.5
+								</div>
+								<div class="slider__btn">
+									<a href="#" class='default-btn '>Залишити заяву</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="slick-next slick-btn slick-disabled"><button></button></div>
 		</section>
 		<section class="services">
 			<div class="container">
@@ -261,7 +324,7 @@
 									Андрій Ворошилов1, Lorem ipsum dolor sit.
 								</div>
 							</div>
-							<!-- <div class="news__slider-item">
+							<div class="news__slider-item">
 								<div class="news__slider-title">
 									Банкротство ы ліквідація підприємств України
 								</div>
@@ -286,7 +349,7 @@
 								<div class="news__slider-author">
 									Андрій Ворошилов3, Lorem ipsum dolor sit.
 								</div>
-							</div> -->
+							</div>
 							<div class="slick-prev slick-btn slick-disabled"><button></button></div>
 							<div class="slick-next slick-btn slick-disabled"><button></button></div>
 						</div>
@@ -352,13 +415,13 @@
 		</footer>
 	</div>
 
-	<!-- <div id="modal">
+	<div id="modal">
 		<form action="">
 			<input type="text" placeholder="Ваше ім'я">
 			<input type="text" placeholder="Ваш телефон">
 			<input type="submit" value="Відправити">
 		</form>
-	</div> -->
+	</div>
 
 	<script src='./js/index.js'></script>
 </body>
